--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby-plugin-postcss": "^4.0.0",
     "postcss": "^8.2.8",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "zustand": "^3.3.3"
   },
   "devDependencies": {
     "prettier": "2.2.1",
