--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "gatsby": "^3.0.1",
     "gatsby-plugin-postcss": "^4.0.0",
     "postcss": "^8.2.8",
