--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "gatsby": "^3.0.1",
     "gatsby-plugin-postcss": "^4.0.0",
     "postcss": "^8.2.8",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "zustand": "^3.3.3"
   },
