--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "chart.js": "^2.9.4",
     "gatsby": "^3.0.1",
     "gatsby-plugin-postcss": "^4.0.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.2.8",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
