--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "file-saver": "^2.0.5",
     "gatsby": "^3.0.1",
     "gatsby-plugin-postcss": "^4.0.0",
     "lodash": "^4.17.21",
