--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "cytoscape": "^3.19.0",
     "file-saver": "^2.0.5",
-    "gatsby": "^3.0.1",
+    "gatsby": "^3.5.1",
     "gatsby-plugin-postcss": "^4.0.0",
     "lodash": "^4.17.21",
-    "postcss": "^8.2.8",
+    "postcss": "^8.2.15",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
