--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "cytoscape": "^3.19.0",
+    "downloadjs": "^1.4.7",
     "file-saver": "^2.0.5",
     "gatsby": "^3.5.1",
     "gatsby-plugin-postcss": "^4.0.0",
